Updating the README

--- a/README
+++ b/README
@@ -1,30 +1,32 @@
-#README - Create Custom Summon Searches
+# Create Custom Summon Searches
 
 ---
 
 This tool was developed by Matthew Reidsma in HTML5 and Javascript to make creating scoped searches in Summon easier. We hope you find it useful.
 
-INSTALLATION
+## Installation
 
 You will need to edit one line of the file "index.html" to make this tool work with your installation of Summon.
 
-Open index.html in a text editor (NOT Microsoft Word! Use Notepad if you have nothing else). On line number #183, replace the string "YOURINSTITUTION" with the institutional prefix from your Summon URL. For instance, Grand Valley State University's Summon prefix is "gvsu." So we'd change line #183 from:
+Open index.html in a text editor (NOT Microsoft Word! Use Notepad if you have nothing else). On line number #20, replace the string "bgsu" with the institutional prefix from your Summon URL. For instance, Bowling Green State University's Summon prefix is "bgsu". So you would change line #20 from:
 
-&lt;form method="GET" action="http://YOURINSTITUTION.summon.serialssolutions.com/search"&gt;<br />
+&lt;body onload="summon.init('bgsu')"&gt;
 
 to:
 
-&lt;form method="GET" action="http://gvsu.summon.serialssolutions.com/search"&gt;<br />
+&lt;body onload="summon.init('YOURPREFIX')"&gt;
 
 Now, copy the files to your computer or a Web server and open the "index.html" file. As you select facets for your search, the HTML code at the bottom will be updated. When you have completed selecting facets for your search, copy the HTML code and paste it into an Web page to create a custom, scoped Summon search.
 
-More questions? Feel free to contact Matthew Reidsma on Twitter at @mreidsma or via email at reidsmam@gvsu.edu.
+<strike>More questions? Feel free to contact Matthew Reidsma on Twitter at @mreidsma or via email at reidsmam@gvsu.edu.</strike>
 
-DEMO
+More questions? Please contact Dave Widmer (dwidmer@bgsu.edu) as this version has been modified from the original.
+
+## Demo
 
 You can view a live version of this tool at http://gvsulib.com/labs/custom_summon.
 
-COPYRIGHT
+## Copyright
 
 This tool is copyright 2011 Grand Valley State University Libraries. 
 
